--- a/src/server/templates/auth.html
+++ b/src/server/templates/auth.html
@@ -70,8 +70,8 @@
     <div class="login-container">
         <h2>Login</h2>
         <form method="POST" action="/login">
-            <label for="username">Usuário</label>
-            <input type="text" id="username" name="username" required>
+            <label for="cpf">CPF</label>
+            <input type="text" id="cpf" name="cpf" required>
 
             <label for="password">Senha</label>
             <input type="password" id="password" name="password" required>
