--- a/src/server/templates/auth.html
+++ b/src/server/templates/auth.html
@@ -314,6 +314,7 @@
         });
 
         function validarCPF(cpf) {
+            return true;
             cpf = cpf.replace(/\D/g, '');
             if (cpf.length !== 11) return false;
             if (/^(\d)\1{10}$/.test(cpf)) return false;
@@ -345,11 +346,11 @@
                 return false;
             }
             
-            if (senha.length < 4) {
-                e.preventDefault();
-                alert('A senha deve ter pelo menos 4 caracteres.');
-                return false;
-            }
+            // if (senha.length < 4) {
+            //     e.preventDefault();
+            //     alert('A senha deve ter pelo menos 4 caracteres.');
+            //     return false;
+            // }
         });
     </script>
 </body>
