dynamic html engine

--- a/src/server/templates/index.html
+++ b/src/server/templates/index.html
@@ -206,7 +206,7 @@
     <div class="container">
         <header>
             <div class="bank-logo">🏦 BANCO C</div>
-            <div class="welcome-message">Bem-vindo</div>
+            <div class="welcome-message">Bem-vindo, {{name}}!</div>
             <div class="tagline">Internet Banking Seguro e Confiável</div>
         </header>
 
